--- a/app/src/main/res/layout/reminder_item.xml
+++ b/app/src/main/res/layout/reminder_item.xml
@@ -1,35 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:columnCount="2"
+    android:rowCount="3" >
 
+    <ImageView
+        android:id="@+id/imgReminderIcon"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center"
+        android:layout_row="0"
+        android:padding="2dp"
+        android:src="@drawable/calendar_icon_nopadding" />
 
-    <TextView
-        android:id="@+id/txtReminderTitle"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Default title"
-        android:textStyle="bold" />
+        android:layout_gravity="start"
+        android:layout_column="1"
+        android:layout_row="0"
+        android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/txtReminderDatetime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="dd.mm.yyyy hh:mm" />
+        <!--
+            @ColumnInfo(name="profile_id") var profile_id: Int,        -SET_AUTOMATIC
+            @ColumnInfo(name="message") var message:String,            -SET
+            @ColumnInfo(name="location_x") var location_x:String?,     -OPTIONAL
+            @ColumnInfo(name="location_y") var location_y:String?,     -OPTIONAL
+            @ColumnInfo(name="reminder_time") var reminder_time:Date,  -SET
+            @ColumnInfo(name="creation_time") var creation_time: Date, -STATUS
+            @ColumnInfo(name="reminder_seen") var reminder_seen:Int    -STATUS
+        -->
 
-    <TextView
-        android:id="@+id/txtReminderDesc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Default description" />
+        <TextView
+            android:id="@+id/txtReminderMsg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Message"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/txtReminderTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="dd.mm.yyyy hh:mm" />
+
+        <TextView
+            android:id="@+id/txtReminderX"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Location X" />
+
+        <TextView
+            android:id="@+id/txtReminderY"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Location y" />
+
+    </LinearLayout>
 
     <View
         android:id="@+id/divider"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="2dp"
-        android:layout_weight="1"
+        android:layout_columnSpan="2"
+        android:layout_row="1"
         android:background="?android:attr/listDivider" />
-</LinearLayout>
+
+</GridLayout>
